--- a/Dynamic_Pricing.ipynb
+++ b/Dynamic_Pricing.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOMWE9Pt7v5vf9zCp1KP5AJ",
+      "authorship_tag": "ABX9TyNdLbMVhJfD0Z9295OTh+xC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,7 +118,7 @@
         "id": "E2Klywj7k7cY",
         "outputId": "07892e09-de00-42f3-ced5-4033cda0435c"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +170,7 @@
         "id": "DPqj8Hy_lZ3s",
         "outputId": "6875396a-6c1f-438d-8a76-3f0bae790886"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -238,7 +237,7 @@
         "id": "3Ip0fDO1nafY",
         "outputId": "047d6755-ed1a-4e82-ad1b-275fdd1307de"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -310,7 +309,7 @@
         "id": "xcUsYahxpHSO",
         "outputId": "dd1af71a-3215-4c5a-bbd9-fba92a3afb5d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,7 +379,36 @@
         "\n",
         "#Calculate demand_multiplier based on percentile for high and low demand\n",
         "high_demand_percentile = 75\n",
-        "low_demand_"
+        "low_demand_percentile = 25\n",
+        "\n",
+        "data['demand_multiplier'] = np.where(data['Number_of_Riders'] > np.percentile(data['Number_of_Riders'], high_demand_percentile),\n",
+        "                                     data['Number_of_Riders'] / np.percentile(data['Number_of_Riders'], high_demand_percentile),\n",
+        "                                     data['Number_of_Riders'] / np.percentile(data['Number_of_Riders'], low_demand_percentile)\n",
+        "                                     )\n",
+        "\n",
+        "\n",
+        "# Calculate Supply Multiplier based on percentile for high and low demand\n",
+        "high_supply_percentile = 75\n",
+        "low_supply_percentile = 25\n",
+        "\n",
+        "data['supply_multiplier'] = np.where(data['Number_of_Drivers'], np.percentile(data['Number_of_Drivers'],low_supply_percentile),\n",
+        "                                     np.percentile(data['Number_of_Drivers'], high_supply_percentile) / data['Number_of_Drivers'],\n",
+        "                                     np.percentile(data['Number_of_Drivers'], low_supply_percentile) / data['Number_of_Drivers']\n",
+        "                                                                    )\n",
+        "\n",
+        "# Define price adjustment factors for high and low demand/supply\n",
+        "demand_threshold_high = 1.2\n",
+        "demand_threshold_low = 0.8\n",
+        "supply_threshold_high = 0.8\n",
+        "supply_threshold_low = 1.2\n",
+        "\n",
+        "# Calculate adjusted_ride_cost for dynamic pricing\n",
+        "data['adjusted_ride_cost'] = data['Historical_Cost_of_Ride'] * (\n",
+        "    np.maximum(data['demand_multiplier'], demand_threshold_low) *\n",
+        "    np.maximum(data['supply_multiplier'], supply_threshold_high)\n",
+        ")\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "Ofv5K-Oyrw--"
